# ct_ws

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
ct_ws/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py
ct_ws/db/: base.py  utils.py
ct_ws/db/migrations/: env.py
ct_ws/db/models/: __init__.py  meal.py  user.py  user_body_parameters.py  user_telegram_credentials.py
ct_ws/services/: __init__.py  auth.py  meal.py  telegram_credentials.py  user.py
ct_ws/tests/: __init__.py  test_ct_ws.py  test_meal.py  test_user.py
ct_ws/web/: __init__.py  application.py  lifetime.py
ct_ws/web/api/: __init__.py  router.py
ct_ws/web/api/base/: __init__.py  schema.py
ct_ws/web/api/echo/: __init__.py  views.py
ct_ws/web/api/meal/: __init__.py  endpoint.py  schema.py
ct_ws/web/api/monitoring/: __init__.py
ct_ws/web/api/telegram_credentials/: __init__.py  schema.py
ct_ws/web/api/user/: __init__.py  endpoint.py  schema.py
ct_ws/web/api/user_body_parameters/: schema.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
